# Research_Agent

./: About_Hema Gandhi.md  About_Jayant Kumar.md  About_Michael van der Steen.md  About_Vivek Mishra.md  LatentBridge_research.md  None_research.md  README.md  crewai_flow.html  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/pre_sales_researcher/: Person_research.md  main.py  streamlit_app.py
src/pre_sales_researcher/crews/companyresearcher/: companyresearcher.py
src/pre_sales_researcher/crews/companyresearcher/config/: agents.yaml  tasks.yaml
src/pre_sales_researcher/crews/peoplesearcher/: peoplesearcher.py
src/pre_sales_researcher/crews/peoplesearcher/config/: agents.yaml  tasks.yaml
src/pre_sales_researcher/tools/: custom_tool.py
src/pre_sales_researcher/utils/: output_handler.py
